src/myMDToHTMLParser.java
// Generated from ./grammar/myMDToHTML.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class myMDToHTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, NUMBER=29, WORD=30, WHITESPACE=31, 
		NEWLINE=32, WORDNUMBERWHITESPACE=33;
	public static final int
		RULE_mdfile = 0, RULE_sentence = 1, RULE_markdownItem = 2, RULE_header = 3, 
		RULE_codeBlock = 4, RULE_italicsAndBold = 5, RULE_bold = 6, RULE_italics = 7, 
		RULE_footnote = 8, RULE_image = 9, RULE_list = 10, RULE_listLine = 11, 
		RULE_table = 12, RULE_tableHeader = 13, RULE_tableBorder = 14, RULE_tableBodyRow = 15, 
		RULE_tableHeaderCell = 16, RULE_tableCell = 17, RULE_default = 18, RULE_footnoteSentence = 19, 
		RULE_imageName = 20, RULE_codeBlockLine = 21, RULE_pound = 22, RULE_verticalLine = 23, 
		RULE_asterisk = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"mdfile", "sentence", "markdownItem", "header", "codeBlock", "italicsAndBold", 
			"bold", "italics", "footnote", "image", "list", "listLine", "table", 
			"tableHeader", "tableBorder", "tableBodyRow", "tableHeaderCell", "tableCell", 
			"default", "footnoteSentence", "imageName", "codeBlockLine", "pound", 
			"verticalLine", "asterisk"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#'", "'```'", "'``'", "'`'", "'*'", "'['", "'^'", "']'", "':'", 
			"'!'", "'-'", "'|'", "'\"'", "'''", "'<'", "'>'", "'('", "')'", "'{'", 
			"'}'", "','", "'.'", "'_'", "';'", "'/'", "'?'", "'='", "'@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "NUMBER", "WORD", "WHITESPACE", "NEWLINE", 
			"WORDNUMBERWHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "myMDToHTML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public myMDToHTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MdfileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(myMDToHTMLParser.EOF, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public MdfileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mdfile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterMdfile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitMdfile(this);
		}
	}

	public final MdfileContext mdfile() throws RecognitionException {
		MdfileContext _localctx = new MdfileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mdfile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				sentence();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4294967166L) != 0) );
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenceContext extends ParserRuleContext {
		public List<MarkdownItemContext> markdownItem() {
			return getRuleContexts(MarkdownItemContext.class);
		}
		public MarkdownItemContext markdownItem(int i) {
			return getRuleContext(MarkdownItemContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(myMDToHTMLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(myMDToHTMLParser.NEWLINE, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				markdownItem();
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4294967166L) != 0) );
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				match(NEWLINE);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MarkdownItemContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public ItalicsAndBoldContext italicsAndBold() {
			return getRuleContext(ItalicsAndBoldContext.class,0);
		}
		public BoldContext bold() {
			return getRuleContext(BoldContext.class,0);
		}
		public ItalicsContext italics() {
			return getRuleContext(ItalicsContext.class,0);
		}
		public FootnoteContext footnote() {
			return getRuleContext(FootnoteContext.class,0);
		}
		public TableContext table() {
			return getRuleContext(TableContext.class,0);
		}
		public ImageContext image() {
			return getRuleContext(ImageContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List<DefaultContext> default_() {
			return getRuleContexts(DefaultContext.class);
		}
		public DefaultContext default_(int i) {
			return getRuleContext(DefaultContext.class,i);
		}
		public MarkdownItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markdownItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterMarkdownItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitMarkdownItem(this);
		}
	}

	public final MarkdownItemContext markdownItem() throws RecognitionException {
		MarkdownItemContext _localctx = new MarkdownItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_markdownItem);
		try {
			int _alt;
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				header();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				codeBlock();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				italicsAndBold();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				bold();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				italics();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				footnote();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				table();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				image();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(75);
				list();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(77); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(76);
						default_();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(79); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public List<PoundContext> pound() {
			return getRuleContexts(PoundContext.class);
		}
		public PoundContext pound(int i) {
			return getRuleContext(PoundContext.class,i);
		}
		public List<DefaultContext> default_() {
			return getRuleContexts(DefaultContext.class);
		}
		public DefaultContext default_(int i) {
			return getRuleContext(DefaultContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitHeader(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(83);
					match(T__0);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(86); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(90); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(90);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
						{
						setState(88);
						pound();
						}
						break;
					case T__5:
					case T__7:
					case T__8:
					case T__9:
					case T__10:
					case T__12:
					case T__13:
					case T__14:
					case T__15:
					case T__16:
					case T__17:
					case T__18:
					case T__19:
					case T__20:
					case T__21:
					case T__22:
					case T__23:
					case T__24:
					case T__25:
					case T__26:
					case T__27:
					case NUMBER:
					case WORD:
					case WHITESPACE:
						{
						setState(89);
						default_();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(92); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeBlockContext extends ParserRuleContext {
		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBlock; }
	 
		public CodeBlockContext() { }
		public void copyFrom(CodeBlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InlineCodeBlockContext extends CodeBlockContext {
		public List<DefaultContext> default_() {
			return getRuleContexts(DefaultContext.class);
		}
		public DefaultContext default_(int i) {
			return getRuleContext(DefaultContext.class,i);
		}
		public InlineCodeBlockContext(CodeBlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterInlineCodeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitInlineCodeBlock(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultilineCodeBlockContext extends CodeBlockContext {
		public TerminalNode WORD() { return getToken(myMDToHTMLParser.WORD, 0); }
		public TerminalNode NEWLINE() { return getToken(myMDToHTMLParser.NEWLINE, 0); }
		public List<CodeBlockLineContext> codeBlockLine() {
			return getRuleContexts(CodeBlockLineContext.class);
		}
		public CodeBlockLineContext codeBlockLine(int i) {
			return getRuleContext(CodeBlockLineContext.class,i);
		}
		public MultilineCodeBlockContext(CodeBlockContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterMultilineCodeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitMultilineCodeBlock(this);
		}
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_codeBlock);
		int _la;
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				_localctx = new MultilineCodeBlockContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				match(T__1);
				setState(95);
				match(WORD);
				setState(96);
				match(NEWLINE);
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97);
					codeBlockLine();
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8589934432L) != 0) );
				setState(102);
				match(T__1);
				}
				break;
			case T__2:
			case T__3:
				_localctx = new InlineCodeBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__2:
					{
					setState(104);
					match(T__2);
					}
					break;
				case T__3:
					{
					setState(105);
					match(T__3);
					setState(107); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(106);
						default_();
						}
						}
						setState(109); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4294963008L) != 0) );
					setState(111);
					match(T__3);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItalicsAndBoldContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(myMDToHTMLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(myMDToHTMLParser.WORD, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(myMDToHTMLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(myMDToHTMLParser.NUMBER, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(myMDToHTMLParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(myMDToHTMLParser.WHITESPACE, i);
		}
		public ItalicsAndBoldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_italicsAndBold; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterItalicsAndBold(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitItalicsAndBold(this);
		}
	}

	public final ItalicsAndBoldContext italicsAndBold() throws RecognitionException {
		ItalicsAndBoldContext _localctx = new ItalicsAndBoldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_italicsAndBold);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__4);
			setState(118);
			match(T__4);
			setState(119);
			match(T__4);
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0) );
			setState(125);
			match(T__4);
			setState(126);
			match(T__4);
			setState(127);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoldContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(myMDToHTMLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(myMDToHTMLParser.WORD, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(myMDToHTMLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(myMDToHTMLParser.NUMBER, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(myMDToHTMLParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(myMDToHTMLParser.WHITESPACE, i);
		}
		public BoldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bold; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterBold(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitBold(this);
		}
	}

	public final BoldContext bold() throws RecognitionException {
		BoldContext _localctx = new BoldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bold);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__4);
			setState(130);
			match(T__4);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(131);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0) );
			setState(136);
			match(T__4);
			setState(137);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItalicsContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(myMDToHTMLParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(myMDToHTMLParser.WORD, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(myMDToHTMLParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(myMDToHTMLParser.NUMBER, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(myMDToHTMLParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(myMDToHTMLParser.WHITESPACE, i);
		}
		public ItalicsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_italics; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterItalics(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitItalics(this);
		}
	}

	public final ItalicsContext italics() throws RecognitionException {
		ItalicsContext _localctx = new ItalicsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_italics);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__4);
			setState(141); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(143); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0) );
			setState(145);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FootnoteContext extends ParserRuleContext {
		public FootnoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_footnote; }
	 
		public FootnoteContext() { }
		public void copyFrom(FootnoteContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EndOfFileFootnoteContext extends FootnoteContext {
		public TerminalNode NUMBER() { return getToken(myMDToHTMLParser.NUMBER, 0); }
		public FootnoteSentenceContext footnoteSentence() {
			return getRuleContext(FootnoteSentenceContext.class,0);
		}
		public EndOfFileFootnoteContext(FootnoteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterEndOfFileFootnote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitEndOfFileFootnote(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InlineFootnoteContext extends FootnoteContext {
		public TerminalNode NUMBER() { return getToken(myMDToHTMLParser.NUMBER, 0); }
		public InlineFootnoteContext(FootnoteContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterInlineFootnote(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitInlineFootnote(this);
		}
	}

	public final FootnoteContext footnote() throws RecognitionException {
		FootnoteContext _localctx = new FootnoteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_footnote);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				_localctx = new EndOfFileFootnoteContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(T__5);
				setState(148);
				match(T__6);
				setState(149);
				match(NUMBER);
				setState(150);
				match(T__7);
				setState(151);
				match(T__8);
				setState(152);
				footnoteSentence();
				}
				break;
			case 2:
				_localctx = new InlineFootnoteContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(153);
				match(T__5);
				setState(154);
				match(T__6);
				setState(155);
				match(NUMBER);
				setState(156);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImageContext extends ParserRuleContext {
		public ImageNameContext imageName() {
			return getRuleContext(ImageNameContext.class,0);
		}
		public ImageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_image; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).enterImage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myMDToHTMLListener ) ((myMDToHTMLListener)listener).exitImage(this);
		}
	}
